# nostrito-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  MULTI_ACCOUNT_ANALYSIS.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: STORAGE.md  SYNC.md  SYNC_ARCHITECTURE.md  bitchat-p2p-integration.md  data-model.md  discovery.md  event-processing.md  modules.md  pruning.md  relay-pool.md  search.md  webrtc-tunnel.md  wot.md
docs/sync-v2/: config.md  migration.md  sync-cycle.md
src/: App.tsx  app.ts  main.ts  main.tsx  relays.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  nip46.rs  paths.rs  wallet.rs
src-tauri/src/relay/: mod.rs  server.rs
src-tauri/src/search/: mod.rs  search.rs
src-tauri/src/storage/: db.rs  estimation.rs  migrations.rs  mod.rs
src-tauri/src/sync/: content.rs  discovery.rs  engine.rs  engine_v2.rs  media.rs  mod.rs  policy.rs  pool.rs  processing.rs  pruning.rs  scheduler.rs  threads.rs  types.rs
src-tauri/src/wot/: bfs.rs  engine.rs  interner.rs  metrics.rs  mod.rs  store.rs
src/components/: ArticleCard.tsx  Avatar.tsx  Badge.tsx  BookmarkPopover.tsx  ComposeModal.tsx  EmptyState.tsx  Icon.tsx  ImageUploadField.tsx  KindBreakdownChart.tsx  MarkdownToolbar.tsx  MentionAutocomplete.tsx  NoteCard.tsx  RelayCard.tsx  Sidebar.tsx  (+4 more)
tests/: advanced.test.ts  bookmarks.test.ts  events.test.ts  interactions.test.ts  media-and-filtering.test.ts  nip19.test.ts  profiles.test.ts  protocol-advanced.test.ts  relay.test.ts  setup.ts  utils.test.ts  zaps.test.ts
(+60 files in other folders)
