[package]
name = "nostrito"
version = "0.1.0"
description = "Personal Nostr mini-relay desktop app"
authors = ["nostrito"]
edition = "2021"

[lib]
name = "nostrito_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
nostr-sdk = "0.36"
tokio-tungstenite = "0.21"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
